overflow issue is fixed in the dashboard

--- a/src/styles.css
+++ b/src/styles.css
@@ -1544,4 +1544,5 @@ strong {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  min-height: 25px;
 }
